<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人简历</string>
    <string name="contentDescription">只是为了没有warning</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="age">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄：</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="birthday">出生日期：</string>
    <string name="nation">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族：</string>
    <string name="polity">政治面貌：</string>
    <string name="school">毕业院校：</string>
    <string name="major">专&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;业：</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="phone">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="email">&#160;&#160;&#160;&#160;E-mail：</string>
    <string name="work">工作经验：</string>
    <string name="worktime">工作时间</string>
    <string name="workcontent">工作内容</string>
    <string name="study">学习经验：</string>
    <string name="studytime">学习时间</string>
    <string name="project">项目经验：</string>
    <string name="schoolreward">学校奖励：</string>
    <string name="otherreward">其他奖励：</string>
    
    <string name="edit">编辑</string>
    <string name="alter">修改</string>
    <string name="personaledit">个人信息编辑</string>
    <string name="personal">个人信息</string>

</resources>